# src/controllers/auth.controller.ts
@@ -20,7 +20,7 @@ import {
 //   CreateSocialUser,
 // } from "../types/Dtos/User.dto";
 import authService from "../services/auth.service";
-import { CreateUser, LoginUser, SignInResponse, User } from "../types/Dtos/user.dto";
+import { CreateUser, ForgotPasswordRequest, IResetPasswordSuccess, LoginUser, ResetPasswordRequest, SignInResponse, User } from "../types/Dtos/user.dto";
 import { SUCCESS_CREATED } from "../constants/general";
 import { HTTP_CREATED, HTTP_OK } from "../constants/httpStatusCodes";
 //import { ICompanyProfileData } from "../types/Dtos/onBoardingCompany.Dto";
@@ -39,5 +39,26 @@ export default class AuthController extends Controller {
     @Body() loginUser: LoginUser
   ): Promise<SignInResponse> {
     return authService.login(loginUser as LoginUser);
+  }
+
+  @Post("forgot-password")
+  @SuccessResponse(HTTP_OK, "Ok")
+  public static async forgotPassword(
+    @Body() req: ForgotPasswordRequest
+  ): Promise<IResetPasswordSuccess> {
+    return authService.forgotPassword(req);
+  }
+
+  @Post("reset-password/{token}")
+  @SuccessResponse(HTTP_OK, "Ok")
+  public static async resetPassword(
+    @Path() token: string,
+    @Body() req: ResetPasswordRequest
+  ): Promise<IResetPasswordSuccess> {
+    const inputs: ResetPasswordRequest = {
+      password: req.password,
+      confirm_password: req.confirm_password,
+    };
+    return await authService.resetPassword(token, inputs);
   }
 }
